fixed about page static image from ch. 4

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -12,8 +12,12 @@
             This tutorial has been put together by Amy Hynes. <br />
         </div>
         <div>
-            <a href="/rango/">Index</a><br />
             <img src="{{ MEDIA_URL}}cat.jpg"
+                alt="Picture of a Rango with an egg" />
+        </div>
+        <div>
+            <a href="/rango/">Index</a><br />
+            <img src="{% static "images/rango_with_egg.jpg" %}"
                 alt="Picture of a cat" />
         </div>
     </body>
