--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango - Add Page</title>
-    </head>
-    
-    <body>
-            {% if category %}
+
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    Add Page
+{% endblock %}
+
+{% block body_block %}
+    {% if category %}
             
         <h1>Add a Page to {{category.name}}</h1>
         
@@ -13,7 +16,7 @@
 
             {% csrf_token%}
             {% for hidden in form.hidden_fields %}
-                   {{ hidden }}
+                {{ hidden }}
             {% endfor %}
 
             {% for field in form.visible_fields %}
@@ -25,10 +28,7 @@
             <input type="submit" name="submit" value="Add Page" />
         </form>
 
-            {% else %}
-                    The specified category does not exist!
-            {% endif %}
-            
-    </body>
-    
-</html>
+    {% else %}
+            The specified category does not exist!
+    {% endif %}
+{% endblock %}
