--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-<head>
-    <title>Rango</title>
-</head>
+{% block title_block %}
+    Index
+{% endblock %}
 
-<body>
+{% block body_block %}
     <h1>Rango says...</h1>
     
     <div>
@@ -15,41 +15,38 @@
     </div>
     
     <div>
-    {% if categories %}
-    <div>
-    <h2>Most Liked Categories</h2>
-    </div>
-    <ul>
-        {% for category in categories %}
-            <li>
-            <a href="/rango/category/{{ category.slug }}">{{ category.name }}</a>
-            </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-        <strong>There are no categories present.</strong>
-    {% endif %}
-    </div>
-
-    <div>
-    {% if pages %}
-    <div>
-    <h2>Most Viewed Pages</h2>
-    </div>
-    <ul>
-        {% for page in pages %}
-             <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-        {% endfor %}
-    </ul>
-    {% else %}
-        <strong>There are no pages present.</strong>
-    {% endif %}
+        {% if categories %}
+            <div>
+                <h2>Most Liked Categories</h2>
+            </div>
+            <ul>
+                {% for category in categories %}
+                    <li>
+                        <a href="{% url 'show_category' category.slug %}">{{ category.name }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
     </div>
 
     <div>
-        <a href="/rango/add_category/">Add a New Category</a><br />
-        <a href="/rango/about/">About Rango</a><br />
+        {% if pages %}
+            <div>
+                <h2>Most Viewed Pages</h2>
+            </div>
+            <ul>
+                {% for page in pages %}
+                     <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no pages present.</strong>
+        {% endif %}
+    </div>
+
+    <div>
         <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
     </div>
-</body>
-</html>
+{% endblock %}
