--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -10,10 +10,8 @@
 {% block body_block %}
     <h1>Register for Rango</h1>
     {% if registered %}
-    <div>
         Rango says: <strong>thank you for registering!</strong>
-        <a href="{% url 'index' %}>Return to the homepage.</a><br />
-    </div>
+        <a href="{% url 'index' %}">Return to the homepage.</a><br />
     {% else %}
         Rango says: <strong>register here!</strong><br />
         <form id="user_form" method="post" action="{% url 'register' %}" enctype="multipart/form-data">
