--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -14,6 +14,9 @@
             This tutorial has been put together by Amy Hynes. <br />
         </div>
         <div>
+            You have visited this site {{visits}} times.
+        </div>
+        <div>
             <img src="{{ MEDIA_URL }}cat.jpg"
                 alt="Picture of a cat" />
             <img src="{% static "images/rango_with_egg.jpg" %}"
