fixing visits on index and about

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -17,7 +17,9 @@
             hey there partner!
         {% endif %}
     </div>
-    
+    <div>
+            visits: {{visits}}
+    </div>
     <div>
         {% if categories %}
             <div>
