--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -14,7 +14,7 @@
             This tutorial has been put together by Amy Hynes. <br />
         </div>
         <div>
-            You have visited this site {{visits}} times.
+            visits: {{visits}}
         </div>
         <div>
             <img src="{{ MEDIA_URL }}cat.jpg"
