--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body_block %}
-    <form id="category_form" method="post" action="rango/add_category/">
+    <form id="category_form" method="post" action="{% url 'add_category' %}">
         {% csrf_token%}
         {% for hidden in form.hidden_fields %}
             {{ hidden }}
@@ -18,6 +18,7 @@
             {{ field.help_text }}
             {{ field }}
         {% endfor %}
-        <input type="submit" name="submit" value="Create Category" />
+        <input type="submit" name="submit" value="Submit" />
     </form>
+    Category name required
 {% endblock %}
