--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -12,7 +12,7 @@
             
         <h1>Add a Page to {{category.name}}</h1>
         
-        <form id="page_form" method="post" action="rango/category/{{ category.slug }}/add_page/">
+        <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
 
             {% csrf_token%}
             {% for hidden in form.hidden_fields %}
@@ -25,7 +25,7 @@
                 {{ field }}
             {% endfor %}
             
-            <input type="submit" name="submit" value="Add Page" />
+            <input type="submit" name="submit" value="Submit" />
         </form>
 
     {% else %}
